# llmio

./: .pylintrc  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-local.txt  requirements.txt  sitemap.xml  utils.py
.github/workflows/: black.yml  check-requirements.yml  ci.yml  docs.yml  mypy.yml  pylint.yml  release.yml  ruff.yml  test.yml
docs/: index.md
examples/: azure_client.py  calculator.py  calculator_sync.py  chat.py  gemini.py  reminders.py  run.py  showcase.ipynb  streaming.py  structured_output.py  task_manager.py  taxi.py  todo.py  wikipedia.py
examples/notebooks/: simple_task_manager.ipynb
llmio/: __init__.py  agent.py  assistant.py  client.py  clients.py  errors.py  function_parser.py  model.py  models.py  types.py
llmio/prompts/: __init__.py
search/: search_index.json
tests/: test_async.py  test_basic.py  test_calculator.py  test_errors.py  test_gather.py  test_run.py  test_schema.py  test_speak.py  test_state.py  test_structured_output.py  test_sync.py  utils.py
