[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "llmio"
version = "0.0.1"
authors = [
  { name="Peter Leupi", email="pleupi123@gmail.com" },
]
description = "Easily connect large language models into your application"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai",
    "pydantic",
    "jinja2",
    "polyfactory",
]
[project.optional-dependencies]
examples = [
    "bs4",
]

[tool.hatch.build]
include = [
  "llmio",
]

[tool.pylint]
max-line-length = 120
extension-pkg-allow-list=[
    "pydantic"
]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-arguments",
    "invalid-name",
    "too-many-locals",
    "too-few-public-methods",
    "duplicate-code",
]

[project.urls]
"Homepage" = "https://github.com/badgeir/llmio"
"Bug Tracker" = "https://github.com/badgeir/llmio/issues"

[tool.ruff]
line-length = 120
