[tool.poetry]
name = "llmio"
version = "0.10.1"
description = "Easily connect large language models into your application"
authors = ["Peter Leupi"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/badgeir/llmio"
repository = "https://github.com/badgeir/llmio"
documentation = "https://github.com/badgeir/llmio"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.41.0"
pydantic = "^2.0.0"
typing-extensions = "^4.12.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.1"
mypy = "^1.11.1"
pylint = "^3.2.6"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length = 120
extension-pkg-allow-list=[
    "pydantic"
]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-arguments",
    "too-many-locals",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-positional-arguments",
]

[tool.ruff]
line-length = 120

[tool.black]
extend-exclude = "examples/notebooks"
